--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 #theme: jekyll-theme-Leap day
 #theme: jekyll-theme-Merlot
 #theme: jekyll-theme-Midnight
-theme: jekyll-theme-Minima
-#theme: jekyll-theme-Minimal
+#theme: jekyll-theme-Minima
+theme: jekyll-theme-Minimal
 #theme: jekyll-theme-Modernist
 #theme: jekyll-theme-Slate
 #theme: jekyll-theme-Tactile
