--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 #theme: jekyll-theme-Merlot
 #theme: jekyll-theme-Midnight
 #theme: jekyll-theme-Minima
-theme: jekyll-theme-Minimal
+#theme: jekyll-theme-Minimal
 #theme: jekyll-theme-Modernist
 #theme: jekyll-theme-Slate
 #theme: jekyll-theme-Tactile
