--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+url: https://valtterihalla.github.io/linnanportti/
 #theme: jekyll-theme-architect
 #theme: jekyll-theme-cayman
 #theme: jekyll-theme-Dinky
