--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 url: https://valtterihalla.github.io/linnanportti/
+repo: https://github.com/valtterihalla/linnanportti/
 #theme: jekyll-theme-architect
 #theme: jekyll-theme-cayman
 #theme: jekyll-theme-Dinky
