--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: As Oy Hämeen Linnan Portti
+theme: jekyll-theme-leap-day
 url: https://valtterihalla.github.io/linnanportti/
 repo: https://github.com/valtterihalla/linnanportti/
 #theme: jekyll-theme-architect
