--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: As Oy Hämeen Linnan Portti
-url: https://valtterihalla.github.io/linnanportti/
+url: https://valtterihalla.github.io
 repo: https://github.com/valtterihalla/linnanportti/
 #theme: jekyll-theme-architect
 #theme: jekyll-theme-cayman
